qt/gen_qvalidator.h

class QEvent;
class QLocale;
class QMetaObject;
class QObject;
class QValidator;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QLocale QLocale;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QRegularExpressionValidator QRegularExpressionValidator;
typedef struct QTimerEvent QTimerEvent;
typedef struct QValidator QValidator;
struct miqt_string QRegularExpressionValidator_trUtf82(const char* s, const char* c);
struct miqt_string QRegularExpressionValidator_trUtf83(const char* s, const char* c, int n);
bool QRegularExpressionValidator_override_virtual_metacall(void* self, intptr_t slot);
int QRegularExpressionValidator_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QRegularExpressionValidator_override_virtual_validate(void* self, intptr_t slot);
int QRegularExpressionValidator_virtualbase_validate(const void* self, struct miqt_string input, int* pos);
bool QRegularExpressionValidator_override_virtual_fixup(void* self, intptr_t slot);
void QRegularExpressionValidator_virtualbase_fixup(const void* self, struct miqt_string param1);
bool QRegularExpressionValidator_override_virtual_event(void* self, intptr_t slot);
bool QRegularExpressionValidator_virtualbase_event(void* self, QEvent* event);
bool QRegularExpressionValidator_override_virtual_eventFilter(void* self, intptr_t slot);
bool QRegularExpressionValidator_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QRegularExpressionValidator_override_virtual_timerEvent(void* self, intptr_t slot);
void QRegularExpressionValidator_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QRegularExpressionValidator_override_virtual_childEvent(void* self, intptr_t slot);
void QRegularExpressionValidator_virtualbase_childEvent(void* self, QChildEvent* event);
bool QRegularExpressionValidator_override_virtual_customEvent(void* self, intptr_t slot);
void QRegularExpressionValidator_virtualbase_customEvent(void* self, QEvent* event);
bool QRegularExpressionValidator_override_virtual_connectNotify(void* self, intptr_t slot);
void QRegularExpressionValidator_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QRegularExpressionValidator_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QRegularExpressionValidator_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QRegularExpressionValidator_delete(QRegularExpressionValidator* self);