qt/gen_qvalidator.nim

proc fcQRegularExpressionValidator_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QRegularExpressionValidator_trUtf82".}
proc fcQRegularExpressionValidator_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QRegularExpressionValidator_trUtf83".}
proc fQRegularExpressionValidator_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QRegularExpressionValidator_virtualbase_metacall".}
proc fcQRegularExpressionValidator_override_virtual_metacall(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_metacall".}
proc fQRegularExpressionValidator_virtualbase_validate(self: pointer, input: struct_miqt_string, pos: ptr cint): cint{.importc: "QRegularExpressionValidator_virtualbase_validate".}
proc fcQRegularExpressionValidator_override_virtual_validate(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_validate".}
proc fQRegularExpressionValidator_virtualbase_fixup(self: pointer, param1: struct_miqt_string): void{.importc: "QRegularExpressionValidator_virtualbase_fixup".}
proc fcQRegularExpressionValidator_override_virtual_fixup(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_fixup".}
proc fQRegularExpressionValidator_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QRegularExpressionValidator_virtualbase_event".}
proc fcQRegularExpressionValidator_override_virtual_event(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_event".}
proc fQRegularExpressionValidator_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QRegularExpressionValidator_virtualbase_eventFilter".}
proc fcQRegularExpressionValidator_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_eventFilter".}
proc fQRegularExpressionValidator_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QRegularExpressionValidator_virtualbase_timerEvent".}
proc fcQRegularExpressionValidator_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_timerEvent".}
proc fQRegularExpressionValidator_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QRegularExpressionValidator_virtualbase_childEvent".}
proc fcQRegularExpressionValidator_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_childEvent".}
proc fQRegularExpressionValidator_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QRegularExpressionValidator_virtualbase_customEvent".}
proc fcQRegularExpressionValidator_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_customEvent".}
proc fQRegularExpressionValidator_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QRegularExpressionValidator_virtualbase_connectNotify".}
proc fcQRegularExpressionValidator_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_connectNotify".}
proc fQRegularExpressionValidator_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QRegularExpressionValidator_virtualbase_disconnectNotify".}
proc fcQRegularExpressionValidator_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QRegularExpressionValidator_override_virtual_disconnectNotify".}
proc fcQRegularExpressionValidator_delete(self: pointer) {.importc: "QRegularExpressionValidator_delete".}


func init*(T: type QValidator, h: ptr cQValidator): QValidator =
  T(h: h)
proc create*(T: type QValidator, ): QValidator =

  QValidator.init(fcQValidator_new())
proc create*(T: type QValidator, parent: gen_qobject.QObject): QValidator =

  QValidator.init(fcQValidator_new2(parent.h))
proc metaObject*(self: QValidator, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQValidator_metaObject(self.h))

proc metacast*(self: QValidator, param1: cstring): pointer =

  fcQValidator_metacast(self.h, param1)

proc metacall*(self: QValidator, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQValidator_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QValidator, s: cstring): string =

  let v_ms = fcQValidator_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QValidator, s: cstring): string =

  let v_ms = fcQValidator_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setLocale*(self: QValidator, locale: gen_qlocale.QLocale): void =

  fcQValidator_setLocale(self.h, locale.h)

proc locale*(self: QValidator, ): gen_qlocale.QLocale =

  gen_qlocale.QLocale(h: fcQValidator_locale(self.h))

proc validate*(self: QValidator, param1: string, param2: ptr cint): QValidatorState =

  QValidatorState(fcQValidator_validate(self.h, struct_miqt_string(data: param1, len: csize_t(len(param1))), param2))

proc fixup*(self: QValidator, param1: string): void =

  fcQValidator_fixup(self.h, struct_miqt_string(data: param1, len: csize_t(len(param1))))

proc changed*(self: QValidator, ): void =

  fcQValidator_changed(self.h)

proc miqt_exec_callback_QValidator_changed(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onchanged*(self: QValidator, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQValidator_connect_changed(self.h, cast[int](addr tmp[]))
proc tr2*(_: type QValidator, s: cstring, c: cstring): string =

  let v_ms = fcQValidator_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QValidator, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQValidator_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QValidator, s: cstring, c: cstring): string =

  let v_ms = fcQValidator_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QValidator, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQValidator_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc callVirtualBase_metacall(self: QValidator, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQValidator_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QValidatormetacallBase* = proc(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
proc onmetacall*(self: QValidator, slot: proc(super: QValidatormetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint) =
  # TODO check subclass
  type Cb = proc(super: QValidatormetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQValidator_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QValidator_metacall(self: ptr cQValidator, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QValidator_metacall ".} =
  type Cb = proc(super: QValidatormetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): auto =
    callVirtualBase_metacall(QValidator(h: self), param1, param2, param3)
  let slotval1 = gen_qobjectdefs.QMetaObjectCall(param1)

  let slotval2 = param2

  let slotval3 = param3


  let virtualReturn = nimfunc[](superCall, slotval1, slotval2, slotval3 )

  virtualReturn
type QValidatorvalidateBase* = proc(param1: string, param2: ptr cint): QValidatorState
proc onvalidate*(self: QValidator, slot: proc(param1: string, param2: ptr cint): QValidatorState) =
  # TODO check subclass
  type Cb = proc(param1: string, param2: ptr cint): QValidatorState
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQValidator_override_virtual_validate(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QValidator_validate(self: ptr cQValidator, slot: int, param1: struct_miqt_string, param2: ptr cint): cint {.exportc: "miqt_exec_callback_QValidator_validate ".} =
  type Cb = proc(param1: string, param2: ptr cint): QValidatorState
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  let vparam1_ms = param1
  let vparam1x_ret = string.fromBytes(toOpenArrayByte(vparam1_ms.data, 0, int(vparam1_ms.len)-1))
  c_free(vparam1_ms.data)
  let slotval1 = vparam1x_ret

  let slotval2 = param2


  let virtualReturn = nimfunc[](slotval1, slotval2 )

  cint(virtualReturn)
proc callVirtualBase_fixup(self: QValidator, param1: string): void =


  fQValidator_virtualbase_fixup(self.h, struct_miqt_string(data: param1, len: csize_t(len(param1))))

type QValidatorfixupBase* = proc(param1: string): void
proc onfixup*(self: QValidator, slot: proc(super: QValidatorfixupBase, param1: string): void) =
  # TODO check subclass
  type Cb = proc(super: QValidatorfixupBase, param1: string): void
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQValidator_override_virtual_fixup(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QValidator_fixup(self: ptr cQValidator, slot: int, param1: struct_miqt_string): void {.exportc: "miqt_exec_callback_QValidator_fixup ".} =
  type Cb = proc(super: QValidatorfixupBase, param1: string): void
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: string): auto =
    callVirtualBase_fixup(QValidator(h: self), param1)
  let vparam1_ms = param1
  let vparam1x_ret = string.fromBytes(toOpenArrayByte(vparam1_ms.data, 0, int(vparam1_ms.len)-1))
  c_free(vparam1_ms.data)
  let slotval1 = vparam1x_ret


  nimfunc[](superCall, slotval1)
proc callVirtualBase_event(self: QValidator, event: gen_qcoreevent.QEvent): bool =


  fQValidator_virtualbase_event(self.h, event.h)

type QValidatoreventBase* = proc(event: gen_qcoreevent.QEvent): bool
proc onevent*(self: QValidator, slot: proc(super: QValidatoreventBase, event: gen_qcoreevent.QEvent): bool) =
  # TODO check subclass
  type Cb = proc(super: QValidatoreventBase, event: gen_qcoreevent.QEvent): bool
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQValidator_override_virtual_event(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QValidator_event(self: ptr cQValidator, slot: int, event: pointer): bool {.exportc: "miqt_exec_callback_QValidator_event ".} =
  type Cb = proc(super: QValidatoreventBase, event: gen_qcoreevent.QEvent): bool
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(event: gen_qcoreevent.QEvent): auto =
    callVirtualBase_event(QValidator(h: self), event)
  let slotval1 = gen_qcoreevent.QEvent(h: event)


  let virtualReturn = nimfunc[](superCall, slotval1 )

  virtualReturn
proc callVirtualBase_eventFilter(self: QValidator, watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): bool =


  fQValidator_virtualbase_eventFilter(self.h, watched.h, event.h)

type QValidatoreventFilterBase* = proc(watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): bool
proc oneventFilter*(self: QValidator, slot: proc(super: QValidatoreventFilterBase, watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): bool) =
  # TODO check subclass
  type Cb = proc(super: QValidatoreventFilterBase, watched: gen_qobject.QObject, event: gen_qcoreevent.QEvent): bool
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQValidator_override_virtual_eventFilter(self.h, cast[int](addr tmp[]))
